@@ -65,7 +65,7 @@ those who either can't or don't feel like installing it.</p>
 <p id="emailaddy">It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>?</b> v0.84<br/>
+<p><b>2004-Sep-17:</b> v0.84<br/>
 New features:
 <ul>
 <li><p>You can quickly update and/or build a specific subdirectory within a
@@ -80,7 +80,12 @@ instead of downloading the different pieces and just building the module,
 kdecvs-build will download the pieces and then build the pieces in their
 subdirectory.  I believe this should be equivalent, but if not, just let me
 know.</p>
+<p>The install handler has also been changed to only install the subdirectory
+you choose, so doing a kdecvs-build kdeextragear-1/amarok won't install all
+of kdeextragear-1. ;-)</p>
 </li>
+<li>The <tt>log_command()</tt> function outputs the command that it is logging
+in debug mode.</li>
 </ul>
 
 Bugfixes:
