@@ -1,6 +1,7 @@
 Version history: 0.84
  * Show failed updates in summary output.
  * You can now update or build only part of a module directly from the command line.
+ * Log command outputs the command it's logging in debug mode.
 
 Version history: 0.83
  * Added option, --ignore-modules.
